# assimp-rs

./: .gitignore  Cargo.toml
examples/: basic.rs
src/: compat.rs  error.rs  formats.rs  io.rs  lib.rs  macros.rs  postprocess.rs  scene.rs
src/components/: animation.rs  camera.rs  iterator.rs  light.rs  macros.rs  material.rs  mesh.rs  mod.rs  node.rs  texture.rs  traits.rs
src/ffi/: link.rs  mod.rs
src/io/: default.rs  macros.rs  mod.rs  multi.rs  read_only.rs  stream.rs
