[package]
authors = ["novacrazy <novacrazy@gmail.com>"]
name = "assimp"
version = "0.1.0"

[dependencies]
bitflags = "0.7.0"
enum_primitive = "0.1.0"
lazy_static = "0.2.2"
libc = "0.2.17"
vec_map = "0.6.0"

[dependencies.assimp-sys]
optional = true
path = "../assimp-sys"

[dependencies.lazy]
path = "../lazy"

[dependencies.nalgebra]
optional = true
version = "0.10.1"

[features]
compat = ["nalgebra"]
default = ["msvc14", "assimp-sys"]
msvc12 = []
msvc14 = []
