[package]
authors = ["novacrazy <novacrazy@gmail.com>"]
name = "assimp"
version = "0.1.0"

[dependencies]
bitflags = "0.8"
enum_primitive = "0.1"
lazy_static = "0.2"
libc = "0.2.17"
trace-error = "0.1.3"
vec_map = "0.7.0"

[dependencies.assimp-sys]
git = "https://github.com/combustion-engine/assimp-sys"
optional = true

[dependencies.nalgebra]
optional = true
version = "0.12.1"

[features]
compat = ["nalgebra"]
default = ["msvc14", "assimp-sys"]
msvc12 = []
msvc14 = []
